tests/Tuc/Fixtures/errors/WrongParticipantIndentation-in-component.tuc
tuc parse error test
participants
    StreamComponent parts
            StreamListener parts
